demo/src/main/java/com/example/demo/Util/Error/PermissionException.java
package com.example.demo.Util.Error;

public class PermissionException extends Exception {
    public PermissionException(String message){
        super(message);
    }
}
